--- a/PowerToysRunDevLauncher/PowerToysRunDevLauncher.Plugin.csproj
+++ b/PowerToysRunDevLauncher/PowerToysRunDevLauncher.Plugin.csproj
@@ -36,6 +36,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CaseSensitiveStandardAnalyzer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="plugin.json" />
   </ItemGroup>
 
@@ -51,6 +55,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PowerToys\src\modules\launcher\Wox.Infrastructure\Wox.Infrastructure.csproj" />
     <ProjectReference Include="..\PowerToys\src\modules\launcher\Wox.Plugin\Wox.Plugin.csproj" />
   </ItemGroup>
 
@@ -61,7 +66,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="(robocopy $(TargetDir) $(ProjectDir)..\PowerToys\x64\$(ConfigurationName)\modules\launcher\Plugins\DevLauncher /MIR /XD index) ^&amp; IF %25ERRORLEVEL%25 LEQ 1 exit 0" />
+    <Exec Command="xcopy /I /Y $(ProjectDir)..\PowerToysRunDevLauncher.Dynamic\bin\$(ConfigurationName)\netcoreapp3.1\ $(TargetDir)&#xD;&#xA;(robocopy $(TargetDir) $(ProjectDir)..\PowerToys\x64\$(ConfigurationName)\modules\launcher\Plugins\DevLauncher /MIR /XD index) ^&amp; IF %25ERRORLEVEL%25 LEQ 1 exit 0" />
   </Target>
 
 </Project>
